1998-12-11  Jim Meyering  <meyering@ascend.com>

	* Version 4.1-b1.

	* lib/quotearg.c (quotearg_buffer): Use `7' as the mask, not `3'.
	From Bruno Haible.
	* tests/ls-2/tests: Add a test for this.

	* man/help2man: import version 1.006.

1998-12-07  Jim Meyering  <meyering@ascend.com>

	* src/copy.c: Use dir_name, not dirname.  Include dirname.h.
	* src/cp.c: Likewise.
	* src/df.c: Likewise.
	* src/install.c: Likewise.
	* src/ln.c: Likewise.
	* src/mvdir.c: Likewise.

	* lib/dirname.c (dir_name): Rename from dirname.
	Make argument `const'.  Include "dirname.h"
	* lib/dirname.h: New file.
	* lib/Makefile.am (noinst_HEADERS): Add dirname.h.

1998-12-06  Jim Meyering  <meyering@ascend.com>

	* lib/rpmatch.c (rpmatch) [!ENABLE_NLS]: Hard-code tests to use
	`^[yY]' and `^[nN]' (avoiding regex).  From Karl Heuer.

	* lib/*.c: Ansideclify.

	Fix `ls -R .' formatting bug that broke mktexlsr.
	* src/ls.c: Include path-concat.h.
	(basename_is_dot_or_dotdot): New function, derived from
	is_not_dot_or_dotdot.
	(is_not_dot_or_dotdot): Remove function.
	(extract_dirs_from_files): Use `!basename_is_dot_or_dotdot'
	instead of is_not_dot_or_dotdot and use path_concat instead of attach.

	* tests/ls-2/tests: New file (renamed from quoting),
	with new test for the `ls -R .' fix.
	* tests/ls-2/quoting: Remove file.
	* tests/ls-2/Makefile.am (TESTS): s/quoting/tests/.

1998-11-29  Jim Meyering  <meyering@ascend.com>

	* src/remove.c (DOT_OR_DOTDOT): Move definition from this file...
	* src/sys2.h (DOT_OR_DOTDOT): ...to this one.

	* src/dd.c (dd_copy): Rename function from `copy'.

	* src/cp.c (do_copy): Rename local: s/unused/copy_into_self/.

	Per Kristian Hove reported that a certain move-directory-into-self
	wasn't properly diagnosed.

	* tests/mv/into-self-3: New file.
	* tests/mv/Makefile.am (TESTS): Add into-self-3.
	* src/copy.c (copy_internal): Remove earlier (but less effective)
	test for move/copy-into-self.
	Instead, deduce the move-into-self condition from errno==EINVAL